# CS-E4780-project2

./: .gitignore  README.md  eda.py  graph_rag.py  initial_system.py  nobel.kuzu.wal  pyproject.toml  testing_pipeline.py  testing_pipeline_initial.py
chroma_langchain_db/: chroma.sqlite3
data/: compare_queries_kuzu.py  comparison_queries.csv  comparison_queries_NEW.csv  comparison_results.csv  logs.txt  plotting.ipynb  plotting_FIXED.ipynb  result_analysis.ipynb  test_results.csv  test_results2.csv  test_results_initial_pipeline.csv  test_results_with_caching.csv  test_results_with_caching2.csv
data/generate_examples/: examples.py  nobel_questions_queries.csv  test_dataset.csv
