[project]
name = "marimo-tutorials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "chromadb>=1.3.0",
    "dspy>=3.0.1",
    "kuzu>=0.11.1",
    "langchain-chroma>=1.0.0",
    "langchain-openai>=1.0.2",
    "marimo>=0.14.17",
    "openai>=1.51.0",
    "polars>=1.32.3",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.1.1",
]
